@@ -669,4 +669,6 @@ Changes since version 1.5-22
        * fixed: mode of index attribute was changed (unintentionally "simplified")
   * pdata.frame is now a little more informative for NA values in either individual or time index
     (a warning issued when such a pdata.frame is created)
+  * [.pdata.frame: indexing a pdata.frame is now fully consistent to indexing a data.frame:
+       * fixed: special case of indexing by [i] (missing j) which erroneously returned rows instead of columns
 
